--- a/puzzle-docs/package.json
+++ b/puzzle-docs/package.json
@@ -12,6 +12,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "vitepress": "^1.1.3"
+    "less": "^4.2.0",
+    "vitepress": "^1.1.3",
+    "vue": "^3.4.25"
+  },
+  "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^10.9.0",
+    "element-plus": "^2.7.2"
   }
 }
