--- a/puzzle-docs/package.json
+++ b/puzzle-docs/package.json
@@ -3,14 +3,12 @@
   "version": "1.0.0",
   "description": "文档说明",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:dev": "vitepress dev docs --port 4000",
+    "docs:build": "vitepress build docs"
   },
   "author": "",
-  "license": "ISC",
   "devDependencies": {
     "less": "^4.2.0",
     "vitepress": "^1.1.3",
@@ -19,6 +17,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^10.9.0",
+    "core-js": "^3.37.0",
     "element-plus": "^2.7.2"
   }
 }
